--- a/LoginDemov3/Accounts.plist
+++ b/LoginDemov3/Accounts.plist
@@ -2,9 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>Username</key>
-	<string>gandalf</string>
 	<key>Password</key>
-	<string>mellon</string>
+	<string>8876</string>
 </dict>
 </plist>
